# DiPho_firmware

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
src/hardware/: adc_internal.rs  gpio.rs  mod.rs  setup.rs
