[package]
authors = ["Piotr Daniel <piotrmaciejdaniel@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "DiPho_firmware"
version = "0.1.0"

[dependencies]
cortex-m = "*"
cortex-m-rt = "*" 
num_enum = { version = "*", default-features = false }
systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git" }
menu = { git = "https://github.com/pm-daniel/menu.git"}
defmt = "*"
cortex-m-rtic = "1.0.0"
panic-semihosting = "*"
#cortex-m-semihosting = "*"
usb-device = "*"
usbd-serial = "*"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
embedded-hal = "*"

[dependencies.stm32f1xx-hal]
version = "*"
features = ["rt", "stm32f103", "stm32-usbd"]

[dev-dependencies]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "DiPho_firmware"
test = false
bench = false

[profile.dev]
codegen-units = 1
opt-level = 1

[profile.release]
codegen-units = 1 # better optimizations
opt-level = 1
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
